// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Changelog creates a comment 1`] = `
Array [
  Array [
    "{
    \\"data\\": {
        \\"endpointChanges\\": {
            \\"endpoints\\": [
                {
                    \\"change\\": {
                        \\"category\\": \\"added\\"
                    },
                    \\"contributions\\": {},
                    \\"pathId\\": \\"path_VyuFAjdBCO\\",
                    \\"path\\": \\"/user\\",
                    \\"method\\": \\"POST\\"
                }
            ]
        }
    }
}",
  ],
  Array [
    "Created body for comment",
  ],
  Array [
    "![changelog](https://raw.github.com/opticdev/optic/develop/assets/changelog_header.png)

[Click Here to See the Documentation](https://spec.useoptic.com/public-specs/person-id/spec-id/changes-since/f83ec784-520b-426e-b686-52ba43db9c5e)

##### Changelog for  \`/.optic/api/specification.yml\`

###### 🟢 Added Endpoints (1)

| Endpoint | Description |     |
| -------- | ----------- | --: |
| **POST** /user |  | [**Review**](https://spec.useoptic.com/public-specs/person-id/spec-id/changes-since/f83ec784-520b-426e-b686-52ba43db9c5e/paths/path_VyuFAjdBCO/methods/POST) |


> Powered by [Optic](https://www.useoptic.com). [Learn how it works!](https://www.useoptic.com/docs/using/baseline)


<!-- optic = {\\"messageHash\\":\\"79be697c2e3942c8bd48c82e7ece67159331597a\\"} -->",
  ],
  Array [
    "Creating comment for PR 100",
  ],
]
`;

exports[`Changelog creates a comment 2`] = `Array []`;

exports[`Changelog creates a comment 3`] = `Array []`;

exports[`Changelog creates a new comment when new commits change the spec 1`] = `
Array [
  Array [
    "{
    \\"data\\": {
        \\"endpointChanges\\": {
            \\"endpoints\\": [
                {
                    \\"change\\": {
                        \\"category\\": \\"added\\"
                    },
                    \\"contributions\\": {},
                    \\"pathId\\": \\"path_VyuFAjdBCO\\",
                    \\"path\\": \\"/user\\",
                    \\"method\\": \\"POST\\"
                }
            ]
        }
    }
}",
  ],
  Array [
    "Created body for comment",
  ],
  Array [
    "![changelog](https://raw.github.com/opticdev/optic/develop/assets/changelog_header.png)

[Click Here to See the Documentation](https://spec.useoptic.com/public-specs/spec-id/changes-since/f83ec784-520b-426e-b686-52ba43db9c5e)

##### Changelog for  \`/.optic/api/specification.yml\`

###### 🟢 Added Endpoints (1)

| Endpoint | Description |     |
| -------- | ----------- | --: |
| **POST** /user |  | [**Review**](https://spec.useoptic.com/public-specs/spec-id/changes-since/f83ec784-520b-426e-b686-52ba43db9c5e/paths/path_VyuFAjdBCO/methods/POST) |


> Powered by [Optic](https://www.useoptic.com). [Learn how it works!](https://www.useoptic.com/docs/using/baseline)


<!-- optic = {\\"messageHash\\":\\"79be697c2e3942c8bd48c82e7ece67159331597a\\"} -->",
  ],
  Array [
    "Creating comment for PR 100",
  ],
]
`;

exports[`Changelog creates a new comment when new commits change the spec 2`] = `
Array [
  Array [
    "{
    \\"data\\": {
        \\"endpointChanges\\": {
            \\"endpoints\\": [
                {
                    \\"change\\": {
                        \\"category\\": \\"added\\"
                    },
                    \\"pathId\\": \\"path_VyuFAjdBCO\\",
                    \\"path\\": \\"/user\\",
                    \\"method\\": \\"POST\\"
                }
            ]
        }
    }
}",
  ],
  Array [
    "Created body for comment",
  ],
  Array [
    "![changelog](https://raw.github.com/opticdev/optic/develop/assets/changelog_header.png)

[Click Here to See the Documentation](https://spec.useoptic.com/public-specs/spec-id/changes-since/f83ec784-520b-426e-b686-52ba43db9c5e)

##### Changelog for  \`/.optic/api/specification.yml\`

###### 🟢 Added Endpoints (1)

| Endpoint | Description |     |
| -------- | ----------- | --: |
**POST** /user | not yet | [**Review**](https://spec.useoptic.com/public-specs/spec-id/changes-since/f83ec784-520b-426e-b686-52ba43db9c5e/paths/path_VyuFAjdBCO/methods/POST) |


> Powered by [Optic](https://www.useoptic.com). [Learn how it works!](https://www.useoptic.com/docs/using/baseline)


<!-- optic = {\\"messageHash\\":\\"b1b86d581c9dd29b5ad67cbafb53dd81149a21d9\\"} -->",
  ],
  Array [
    "Creating comment for PR 100",
  ],
  Array [
    "{
    \\"data\\": {
        \\"endpointChanges\\": {
            \\"endpoints\\": [
                {
                    \\"change\\": {
                        \\"category\\": \\"added\\"
                    },
                    \\"pathId\\": \\"root\\",
                    \\"path\\": \\"\\",
                    \\"method\\": \\"GET\\"
                },
                {
                    \\"change\\": {
                        \\"category\\": \\"updated\\"
                    },
                    \\"pathId\\": \\"path_jleYfnE1Ru\\",
                    \\"path\\": \\"/api/account/specs\\",
                    \\"method\\": \\"GET\\"
                },
                {
                    \\"change\\": {
                        \\"category\\": \\"added\\"
                    },
                    \\"pathId\\": \\"path_to6GIY7tL3\\",
                    \\"path\\": \\"/healthcheck\\",
                    \\"method\\": \\"GET\\"
                },
                {
                    \\"change\\": {
                        \\"category\\": \\"added\\"
                    },
                    \\"pathId\\": \\"path_Zbx2qte52s\\",
                    \\"path\\": \\"/api/account/tokens\\",
                    \\"method\\": \\"GET\\"
                },
                {
                    \\"change\\": {
                        \\"category\\": \\"added\\"
                    },
                    \\"pathId\\": \\"path_Zbx2qte52s\\",
                    \\"path\\": \\"/api/account/tokens\\",
                    \\"method\\": \\"POST\\"
                },
                {
                    \\"change\\": {
                        \\"category\\": \\"added\\"
                    },
                    \\"pathId\\": \\"path_jleYfnE1Ru\\",
                    \\"path\\": \\"/api/account/specs\\",
                    \\"method\\": \\"POST\\"
                },
                {
                    \\"change\\": {
                        \\"category\\": \\"added\\"
                    },
                    \\"pathId\\": \\"path_td6dXtR2C5\\",
                    \\"path\\": \\"/api/specs/{specId}\\",
                    \\"method\\": \\"GET\\"
                }
            ]
        }
    }
}",
  ],
  Array [
    "Created body for comment",
  ],
  Array [
    "![changelog](https://raw.github.com/opticdev/optic/develop/assets/changelog_header.png)

[Click Here to See the Documentation](https://spec.useoptic.com/public-specs/spec-id/changes-since/b261e2d4-4a2a-43fd-9d95-bcd891519474)

##### Changelog for  \`/.optic/api/specification.yml\`

###### 🟢 Added Endpoints (6)

| Endpoint | Description |     |
| -------- | ----------- | --: |
**GET**  | not yet | [**Review**](https://spec.useoptic.com/public-specs/spec-id/changes-since/b261e2d4-4a2a-43fd-9d95-bcd891519474/paths/root/methods/GET) |,**GET** /healthcheck | not yet | [**Review**](https://spec.useoptic.com/public-specs/spec-id/changes-since/b261e2d4-4a2a-43fd-9d95-bcd891519474/paths/path_to6GIY7tL3/methods/GET) |,**GET** /api/account/tokens | not yet | [**Review**](https://spec.useoptic.com/public-specs/spec-id/changes-since/b261e2d4-4a2a-43fd-9d95-bcd891519474/paths/path_Zbx2qte52s/methods/GET) |,**POST** /api/account/tokens | not yet | [**Review**](https://spec.useoptic.com/public-specs/spec-id/changes-since/b261e2d4-4a2a-43fd-9d95-bcd891519474/paths/path_Zbx2qte52s/methods/POST) |,**POST** /api/account/specs | not yet | [**Review**](https://spec.useoptic.com/public-specs/spec-id/changes-since/b261e2d4-4a2a-43fd-9d95-bcd891519474/paths/path_jleYfnE1Ru/methods/POST) |,**GET** /api/specs/{specId} | not yet | [**Review**](https://spec.useoptic.com/public-specs/spec-id/changes-since/b261e2d4-4a2a-43fd-9d95-bcd891519474/paths/path_td6dXtR2C5/methods/GET) |
###### 📝 Updated Endpoints (1)

| Endpoint | Description |     |
| -------- | ----------- | --: |
**GET** /api/account/specs | not yet | [**Review**](https://spec.useoptic.com/public-specs/spec-id/changes-since/b261e2d4-4a2a-43fd-9d95-bcd891519474/paths/path_jleYfnE1Ru/methods/GET) |


> Powered by [Optic](https://www.useoptic.com). [Learn how it works!](https://www.useoptic.com/docs/using/baseline)


<!-- optic = {\\"messageHash\\":\\"5c322aae54fd7fe1bf8f03a7bf51ff4f59be8cce\\"} -->",
  ],
  Array [
    "Creating comment for PR 100",
  ],
]
`;

exports[`Changelog doesn't create a comment when new commits don't change the spec 1`] = `
Array [
  Array [
    "{
    \\"data\\": {
        \\"endpointChanges\\": {
            \\"endpoints\\": [
                {
                    \\"change\\": {
                        \\"category\\": \\"added\\"
                    },
                    \\"contributions\\": {},
                    \\"pathId\\": \\"path_VyuFAjdBCO\\",
                    \\"path\\": \\"/user\\",
                    \\"method\\": \\"POST\\"
                }
            ]
        }
    }
}",
  ],
  Array [
    "Created body for comment",
  ],
  Array [
    "![changelog](https://raw.github.com/opticdev/optic/develop/assets/changelog_header.png)

[Click Here to See the Documentation](https://spec.useoptic.com/public-specs/person-id/spec-id/changes-since/f83ec784-520b-426e-b686-52ba43db9c5e)

##### Changelog for  \`/.optic/api/specification.yml\`

###### 🟢 Added Endpoints (1)

| Endpoint | Description |     |
| -------- | ----------- | --: |
| **POST** /user |  | [**Review**](https://spec.useoptic.com/public-specs/person-id/spec-id/changes-since/f83ec784-520b-426e-b686-52ba43db9c5e/paths/path_VyuFAjdBCO/methods/POST) |


> Powered by [Optic](https://www.useoptic.com). [Learn how it works!](https://www.useoptic.com/docs/using/baseline)


<!-- optic = {\\"messageHash\\":\\"79be697c2e3942c8bd48c82e7ece67159331597a\\"} -->",
  ],
  Array [
    "Creating comment for PR 100",
  ],
]
`;

exports[`Changelog doesn't create a comment when new commits don't change the spec 2`] = `Array []`;

exports[`Changelog doesn't create a comment when new commits don't change the spec 3`] = `Array []`;

exports[`Changelog doesn't create a comment when new commits don't change the spec 4`] = `
Array [
  Array [
    "{
    \\"data\\": {
        \\"endpointChanges\\": {
            \\"endpoints\\": [
                {
                    \\"change\\": {
                        \\"category\\": \\"added\\"
                    },
                    \\"contributions\\": {},
                    \\"pathId\\": \\"path_VyuFAjdBCO\\",
                    \\"path\\": \\"/user\\",
                    \\"method\\": \\"POST\\"
                }
            ]
        }
    }
}",
  ],
  Array [
    "Created body for comment",
  ],
  Array [
    "![changelog](https://raw.github.com/opticdev/optic/develop/assets/changelog_header.png)

[Click Here to See the Documentation](https://spec.useoptic.com/public-specs/person-id/spec-id/changes-since/f83ec784-520b-426e-b686-52ba43db9c5e)

##### Changelog for  \`/.optic/api/specification.yml\`

###### 🟢 Added Endpoints (1)

| Endpoint | Description |     |
| -------- | ----------- | --: |
| **POST** /user |  | [**Review**](https://spec.useoptic.com/public-specs/person-id/spec-id/changes-since/f83ec784-520b-426e-b686-52ba43db9c5e/paths/path_VyuFAjdBCO/methods/POST) |


> Powered by [Optic](https://www.useoptic.com). [Learn how it works!](https://www.useoptic.com/docs/using/baseline)


<!-- optic = {\\"messageHash\\":\\"79be697c2e3942c8bd48c82e7ece67159331597a\\"} -->",
  ],
  Array [
    "Creating comment for PR 100",
  ],
  Array [
    "{
    \\"data\\": {
        \\"endpointChanges\\": {
            \\"endpoints\\": []
        }
    }
}",
  ],
]
`;

exports[`Changelog doesn't create a comment when new commits don't change the spec 5`] = `
Array [
  Array [
    "No API changes in this PR.",
  ],
]
`;

exports[`Changelog doesn't create a comment when new commits don't change the spec 6`] = `Array []`;

exports[`Changelog fails silently when there isn't a spec in the head branch 1`] = `[MockFunction]`;

exports[`Changelog includes purpose on comment 1`] = `
Array [
  Array [
    "{
    \\"data\\": {
        \\"endpointChanges\\": {
            \\"endpoints\\": [
                {
                    \\"change\\": {
                        \\"category\\": \\"added\\"
                    },
                    \\"contributions\\": {},
                    \\"pathId\\": \\"root\\",
                    \\"path\\": \\"/\\",
                    \\"method\\": \\"GET\\"
                },
                {
                    \\"change\\": {
                        \\"category\\": \\"updated\\"
                    },
                    \\"contributions\\": {
                        \\"purpose\\": \\"List all of your specs\\"
                    },
                    \\"pathId\\": \\"path_jleYfnE1Ru\\",
                    \\"path\\": \\"/api/account/specs\\",
                    \\"method\\": \\"GET\\"
                },
                {
                    \\"change\\": {
                        \\"category\\": \\"added\\"
                    },
                    \\"contributions\\": {},
                    \\"pathId\\": \\"path_to6GIY7tL3\\",
                    \\"path\\": \\"/healthcheck\\",
                    \\"method\\": \\"GET\\"
                },
                {
                    \\"change\\": {
                        \\"category\\": \\"added\\"
                    },
                    \\"contributions\\": {
                        \\"purpose\\": \\"Get your tokens\\"
                    },
                    \\"pathId\\": \\"path_Zbx2qte52s\\",
                    \\"path\\": \\"/api/account/tokens\\",
                    \\"method\\": \\"GET\\"
                },
                {
                    \\"change\\": {
                        \\"category\\": \\"added\\"
                    },
                    \\"contributions\\": {
                        \\"purpose\\": \\"Create a new token\\"
                    },
                    \\"pathId\\": \\"path_Zbx2qte52s\\",
                    \\"path\\": \\"/api/account/tokens\\",
                    \\"method\\": \\"POST\\"
                },
                {
                    \\"change\\": {
                        \\"category\\": \\"added\\"
                    },
                    \\"contributions\\": {
                        \\"description\\": \\"Returns a signed upload URL you can use to upload the spec\\",
                        \\"purpose\\": \\"Create a new spec to upload\\"
                    },
                    \\"pathId\\": \\"path_jleYfnE1Ru\\",
                    \\"path\\": \\"/api/account/specs\\",
                    \\"method\\": \\"POST\\"
                },
                {
                    \\"change\\": {
                        \\"category\\": \\"added\\"
                    },
                    \\"contributions\\": {
                        \\"purpose\\": \\"Get information about a specific spec\\"
                    },
                    \\"pathId\\": \\"path_td6dXtR2C5\\",
                    \\"path\\": \\"/api/specs/{specId}\\",
                    \\"method\\": \\"GET\\"
                }
            ]
        }
    }
}",
  ],
  Array [
    "Created body for comment",
  ],
  Array [
    "![changelog](https://raw.github.com/opticdev/optic/develop/assets/changelog_header.png)

[Click Here to See the Documentation](https://spec.useoptic.com/public-specs/person-id/spec-id/documentation)

##### Changelog for  \`/.optic/api/specification.yml\`

###### 🟢 Added Endpoints (6)

| Endpoint | Description |     |
| -------- | ----------- | --: |
| **GET** / |  | [**Review**](https://spec.useoptic.com/public-specs/person-id/spec-id/documentation/paths/root/methods/GET) |
| **GET** /healthcheck |  | [**Review**](https://spec.useoptic.com/public-specs/person-id/spec-id/documentation/paths/path_to6GIY7tL3/methods/GET) |
| **GET** /api/account/tokens | Get your tokens | [**Review**](https://spec.useoptic.com/public-specs/person-id/spec-id/documentation/paths/path_Zbx2qte52s/methods/GET) |
| **POST** /api/account/tokens | Create a new token | [**Review**](https://spec.useoptic.com/public-specs/person-id/spec-id/documentation/paths/path_Zbx2qte52s/methods/POST) |
| **POST** /api/account/specs | Create a new spec to upload | [**Review**](https://spec.useoptic.com/public-specs/person-id/spec-id/documentation/paths/path_jleYfnE1Ru/methods/POST) |
| **GET** /api/specs/{specId} | Get information about a specific spec | [**Review**](https://spec.useoptic.com/public-specs/person-id/spec-id/documentation/paths/path_td6dXtR2C5/methods/GET) |
###### 📝 Updated Endpoints (1)

| Endpoint | Description |     |
| -------- | ----------- | --: |
| **GET** /api/account/specs | List all of your specs | [**Review**](https://spec.useoptic.com/public-specs/person-id/spec-id/documentation/paths/path_jleYfnE1Ru/methods/GET) |


> Powered by [Optic](https://www.useoptic.com). [Learn how it works!](https://www.useoptic.com/docs/using/baseline)


<!-- optic = {\\"messageHash\\":\\"87d2d03b6409d79481b569e5edaee9208190454d\\"} -->",
  ],
  Array [
    "Creating comment for PR 100",
  ],
]
`;

exports[`Changelog works correctly when there isn't a spec in the base branch 1`] = `
Array [
  Array [
    "{
    \\"data\\": {
        \\"endpointChanges\\": {
            \\"endpoints\\": [
                {
                    \\"change\\": {
                        \\"category\\": \\"added\\"
                    },
                    \\"contributions\\": {},
                    \\"pathId\\": \\"path_VyuFAjdBCO\\",
                    \\"path\\": \\"/user\\",
                    \\"method\\": \\"POST\\"
                },
                {
                    \\"change\\": {
                        \\"category\\": \\"added\\"
                    },
                    \\"contributions\\": {},
                    \\"pathId\\": \\"path_VyuFAjdBCO\\",
                    \\"path\\": \\"/user\\",
                    \\"method\\": \\"GET\\"
                }
            ]
        }
    }
}",
  ],
  Array [
    "Created body for comment",
  ],
  Array [
    "![changelog](https://raw.github.com/opticdev/optic/develop/assets/changelog_header.png)

[Click Here to See the Documentation](https://spec.useoptic.com/public-specs/person-id/spec-id/documentation)

##### Changelog for  \`/.optic/api/specification.yml\`

###### 🟢 Added Endpoints (2)

| Endpoint | Description |     |
| -------- | ----------- | --: |
| **POST** /user |  | [**Review**](https://spec.useoptic.com/public-specs/person-id/spec-id/documentation/paths/path_VyuFAjdBCO/methods/POST) |
| **GET** /user |  | [**Review**](https://spec.useoptic.com/public-specs/person-id/spec-id/documentation/paths/path_VyuFAjdBCO/methods/GET) |


> Powered by [Optic](https://www.useoptic.com). [Learn how it works!](https://www.useoptic.com/docs/using/baseline)


<!-- optic = {\\"messageHash\\":\\"b9ddaeac11ab1a275f282f53691313e32e760998\\"} -->",
  ],
  Array [
    "Creating comment for PR 100",
  ],
]
`;

exports[`Changelog works correctly when there isn't a spec in the base branch 2`] = `Array []`;

exports[`Changelog works correctly when there isn't a spec in the base branch 3`] = `
Array [
  Array [
    "Could not find the Optic spec in the base branch main. Looking in .optic/api/specification.yml.",
  ],
]
`;
